--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "starter",
+  "proxy": "https://cool-media-backend.onrender.com",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://cool-media-backend.onrender.com",
   "dependencies": {
     "@iconscout/react-unicons": "^1.1.6",
     "@mantine/core": "^4.2.1",
@@ -24,6 +24,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
+    "serve": "^14.2.3",
     "socket.io-client": "^4.5.1",
     "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.0"
@@ -32,7 +33,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "npm run build"
   },
   "eslintConfig": {
     "extends": [
