--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.27.2",
     "react": "^17.0.2",
+    "react-calendar": "^5.0.0",
+    "react-datetime-picker": "^6.0.1",
     "react-dom": "^17.0.2",
     "react-file-base64": "^1.0.3",
     "react-input-emoji": "^4.1.0",
+    "react-modal": "^3.16.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
     "react-spinners": "^0.14.1",
+    "react-time-picker": "^7.0.0",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
